# dbdiagram-to-sea

./: .gitignore  Cargo.toml  README.md  reload.sh
config/: generate_config.toml  schema_config.toml
input/: test.dbml
src/: lib.rs  main.rs
src/db_type/: column_enum.rs  mod.rs  relation.rs  table.rs
src/error_enum/: generation_error.rs  init_error.rs  mod.rs  schema_error.rs
src/generation/: generate_enum.rs  generate_relation.rs  generate_table.rs  mod.rs
src/init/: default_config.rs  mod.rs
src/input/: test.dbml
src/parser/: column_enum.rs  mod.rs  relation.rs  table.rs
src/tools/: mod.rs
src/validator/: mod.rs  schema_enum.rs  schema_relation.rs  schema_table.rs  vailtor_schema.rs  valid_enum.rs  valid_relation.rs  valid_schema.rs  valid_table.rs
src/validtor/: mod.rs  schema_enum.rs  schema_relation.rs  schema_table.rs  vailtor_schema.rs  valid_enum.rs  valid_relation.rs  valid_table.rs
templates/: migrate_template.rs.txt
