[package]
name = "db-diagram-to-sea-orm"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
nom = "8.0.0"
tokio = { version = "1.44.2", features = ["full"]}
serde = { version = "1.0.219" , features = ["derive"]}
toml = "0.8.20"
thiserror = "2.0.12"
regex = "1.11.1"
anyhow = "1.0.98"
tera = "1.20.0"
clap = { version = "4.5.40", features = ["derive"] }
chrono = "0.4.41"
